--- a/main.html
+++ b/main.html
@@ -10,6 +10,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<input id="name" type="text" placeholder="Name">
+		<input id="phone" type="text" placeholder="Phone Number">
+		<input id="address" type="text" placeholder="Address">
+	<labe><input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?</labe>
+	<select id="multiSelect">
+		<option>breza</option>
+		<option>vip</option>
+		<option>abc</option>
+	</select>
+	<input id="submit" type="submit" value="Submit">
+	
+	
 
 </body>
 
