--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	<input id="name" type="text" placeholder="Name">
 		<input id="phone" type="text" placeholder="Phone Number">
 		<input id="address" type="text" placeholder="Address">
-	<labe><input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?</labe>
+	<label><input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?</label>
 	<select id="multiSelect">
 		<option>breza</option>
 		<option>vip</option>
