--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<input id="phone" type="text" placeholder="Phone Number">
 		<input id="address" type="text" placeholder="Address">
 	<label><input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?</label>
-	<select id="multiSelect">
+		<select id="multiSelect" type="select">
 		<option>breza</option>
 		<option>vip</option>
 		<option>abc</option>
