--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 	<input id="name" type="text" placeholder="Name">
 		<input id="phone" type="text" placeholder="Phone Number">
 		<input id="address" type="text" placeholder="Address">
-	<label><input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?</label>
-		<select id="multiSelect" type="select">
+	<label><input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?" >Have you ever lived with a Dog before?</label>
+		<select id="multiSelect">
 		<option>breza</option>
 		<option>vip</option>
 		<option>abc</option>
 	</select>
-	<input id="submit" type="submit" value="Submit">
+	<input  type="submit" id="submit" value="Submit">
     <script type="text/javascript" src="./script.js">
 </script>
 	
