--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
 	<input id="name" type="text" placeholder="Name">
 		<input id="phone" type="text" placeholder="Phone Number">
 		<input id="address" type="text" placeholder="Address">
@@ -18,6 +19,7 @@
 		<option>abc</option>
 	</select>
 	<input  type="submit" id="submit" value="Submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 	
